--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "colors": "^1.3.2",
+    "chalk": "^2.4.1",
     "inquirer": "^6.2.0",
     "mysql": "^2.16.0"
   }
