--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "chalk": "^2.4.1",
+    "cli-table": "^0.3.1",
     "inquirer": "^6.2.0",
     "mysql": "^2.16.0"
   }
